--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ a:hover {
 }
 
 .logo.small {
-  background: pink;
+  background: var(--background);
 }
 
 #header a {
@@ -170,7 +170,7 @@ a:hover {
 #footer {
   background: var(--accent2);
   color: var(--background);
-  height: 20vh;
+  height: 120px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -199,7 +199,7 @@ a:hover {
   width: 50px;
   height: 50px;
   margin: 0 20px;
-  background: pink;
+  background: var(--background);
   border-radius: 25px;
 }
 
