--- a/style.css
+++ b/style.css
@@ -147,6 +147,32 @@ a:hover {
 
 
 
+/* BOTH TOPICS */
+
+.body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 60px;
+  cursor: default;
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.topic-blurb {
+ width: 60%;
+}
+
+.topic-picture {
+  height: 100%;
+  width: 30%;
+  background: #fff;
+  box-shadow: 2px 2px 4px #333;
+}
+
+
+
 /* TOPIC1 */
 
 #topic1 {
