--- a/style.css
+++ b/style.css
@@ -234,11 +234,30 @@ ul {
 
 
 
+/* CONTACT */
+
+#contact {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 2%;
+}
+
+.contact-info {
+  width: 35%;
+  font: 20px var(--header);
+  cursor: default;
+}
+
+
+
 /* FORM */
 
 form {
   width: 50%;
   margin: auto;
+  padding: 0 50px 0 0;
+  border-right: 2px solid var(--accent2);
 }
 
 form div {
@@ -255,10 +274,14 @@ textarea {
   border: 1px solid var(--accent1);
   color: var(--text);
   width: 100%;
-  padding: 2px;
+  padding: 4px;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+textarea {
+  height: 150px;
 }
 
 input:focus,
@@ -271,9 +294,9 @@ button {
   background: var(--accent1);
   color: var(--accent4);
   font: 16px var(--header);
-  border: 2px solid var(--accent1);
-  border-radius: 10px;
-  padding: 2px 8px 4px;
+  border: none;
+  border-radius: 5px;
+  padding: 4px 14px 6px;
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
