--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 
   --topImage: center/cover url('./images/MainBackgroundPhoto.png');
 
+  --topPagesImage: top/cover url('./images/TopPages.png');
+
   /* https://images.pexels.com/photos/142497/pexels-photo-142497.jpeg */
 
   --svg: url('./images/SmallLogoBlurb.svg') no-repeat;
@@ -157,6 +159,10 @@ ul {
 }
 
 #header-page {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -164,9 +170,10 @@ ul {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
-  background: var(--accent1);
+  background: var(--accent1O);
   color: var(--accent4);
   z-index: 1000;
+  transition: all 0.5s;
 }
 
 .header-title,
@@ -175,6 +182,10 @@ ul {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+.header-title:hover .name {
+  color: #f5fdce;
 }
 
 .header-title div,
@@ -220,7 +231,7 @@ ul {
 }
 
 #header-page .header-title .name {
-  font: 18px var(--header);
+  font: 22px var(--header);
   padding: 0 20px 8px;
 }
 
@@ -249,6 +260,11 @@ ul {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+#top-pages {
+  background: var(--topPagesImage), var(--accent2);
+  height: 75vh;
 }
 
 
@@ -505,6 +521,9 @@ button:hover {
   .header-title {
     justify-content: center;
     margin-bottom: 20px;
+  }
+  #header-page .header-title {
+    margin-bottom: 5px;
   }
   .header-title div,
   .header-links a {
