add new image for Client Base

--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@ ul {
 }
 
 #topic-bases .image4 {
-  background: center/cover url('./images/pexels-ozgomz-forester.jpg');
+  background: 75% 75%/300%  url('./images/pexels-mount-polley-forester.jpg');
 }
 
 
